--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@zikwall/use-localforage": "^1.0.0",
     "antd": "^5.22.1",
-    "axios": "^1.7.7",
+    "localforage": "^1.10.0",
     "next": "15.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
