--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@uiw/react-heat-map": "^2.3.1",
     "@zikwall/use-localforage": "^1.0.0",
     "antd": "^5.22.1",
     "dayjs": "^1.11.13",
     "localforage": "^1.10.0",
     "next": "15.0.3",
     "react": "18.3.1",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "18.3.1",
     "react-query": "^3.39.3"
   },
