--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.4",
     "@ant-design/icons": "^5.5.1",
+    "@ant-design/plots": "^2.3.2",
     "@uiw/react-heat-map": "^2.3.1",
     "@zikwall/use-localforage": "^1.0.0",
     "antd": "^5.22.1",
